added a new row in session overview

--- a/templates/unitcoordinator_dashboard.html
+++ b/templates/unitcoordinator_dashboard.html
@@ -337,7 +337,7 @@
                   <div class="kv-row"><dt>Day:</dt>       <dd id="inspDay"></dd></div>
                   <div class="kv-row"><dt>Time:</dt>      <dd id="inspTime"></dd></div>
                   <div class="kv-row"><dt>Duration:</dt>  <dd id="inspDur"></dd></div>
-                  <div class="kv-row"><dt>Start Date:</dt><dd id="inspDate"></dd></div>
+                  <div class="kv-row"><dt>Date:</dt>      <dd id="inspDate"></dd></div>
                 </dl>
               </div>
 
