--- a/templates/unitcoordinator_dashboard.html
+++ b/templates/unitcoordinator_dashboard.html
@@ -125,7 +125,7 @@
   <!-- MODAL -->
   <div id="createUnitModal" class="modal-overlay hidden">
     <div class="modal-box" role="dialog" aria-modal="true" aria-labelledby="create-unit-title">
-      <button onclick="closeCreateUnitModal()" class="modal-close" aria-label="Close">✕</button>
+      <button class="modal-close" aria-label="Close">✕</button>
 
       <div class="modal-top">
         <div class="modal-title">
