modified sign up page

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -40,6 +40,16 @@
             </div>
 
             <div class="input-box">
+                <i class='bx bx-phone'></i>
+                <input type="tel" name="phone" placeholder="Phone Number" required>
+            </div>
+
+            <div class="input-box">
+                <i class='bx bx-id-card'></i>
+                <input type="text" name="staff_number" placeholder="Staff Number" required>
+            </div>
+
+            <div class="input-box">
                 <i class='bx bx-envelope'></i>
                 <input type="email" name="email" placeholder="Email" required>
             </div>
